--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
   "theme_color": "#fafafa",
   "background_color": "#fafafa",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "https://ivanatijanic.github.io/nemacki/",
   "description": "Priprema za ispit Gete,Telc,ÖSD,FSP"
 }
