--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,17 @@
   "short_name": "Casovi nemackog jezika",
   "icons": [
     { "src": "./assets/images/favicon/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "./assets/images/favicon/android-chrome-192x192.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "./assets/images/favicon/android-chrome-192x192.png", "sizes": "512x512", "type": "image/png" },
+    {
+      "src": "./assets/images/favicon/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ],
   "theme_color": "#fafafa",
   "background_color": "#fafafa",
   "display": "standalone",
-  "start_url": "https://ivanatijanic.github.io/nemacki/",
+  "start_url": "../nemacki/",
   "description": "Priprema za ispit Gete,Telc,ÖSD,FSP"
 }
