--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
   "theme_color": "#fafafa",
   "background_color": "#fafafa",
   "display": "standalone",
-  "start_url": "../nemacki/",
+  "start_url": "/",
   "description": "Priprema za ispit Gete,Telc,ÖSD,FSP"
 }
